doc: swagger documentation